--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -8,7 +8,26 @@
 		<div class="ui">
 			<h4 class="ui__title">Configuration</h4>
 			<div class="ui__group">
-				<button id="uiToggleBtn" class="btn btn_stop">Stop</button>
+				<label>Shape</label>
+				<select id="uiShape"></select>
+			</div>
+			<div class="ui__group">
+				<label>Delay</label>
+				<input id="uiSpeedVal" type="number" min="25" value="250" step="250">
+			</div>
+			<div class="ui__group">
+				<label>Lock camera</label>
+				<input id="uiCamLock" type="checkbox">
+			</div>
+			<div class="ui__group">
+				<button id="uiReset" class="btn">Reset</button>
+			</div>
+			<div class="ui__group">
+				<button id="uiRandomize" class="btn">Randomize</button>
+			</div>
+			<hr>
+			<div class="ui__group">
+				<button id="uiToggleBtn" class="btn"></button>
 			</div>
 		</div>
 	</body>
